<?xml version="1.0"?>
<package format="3">
  <name>a1an</name>
  <version>0.0.1</version>
  <description>Paquete base del proyecto a1an.</description>

  <maintainer email="alanguevara36@gmail.com">Grupo02</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>